pv-pvc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange-pv
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exchange-pv
  template:
    metadata:
      labels:
        app: data-exchange-pv
    spec:
      containers:
      - name: busybox
        image: busybox:latest
        command:
        - /bin/sh
        - -c
        - |
          while true; do
            echo "$(date) - Data from busybox" >> /data/shared.txt
            sleep 5
          done
        volumeMounts:
        - name: persistent-storage
          mountPath: /data
      - name: multitool
        image: wbitt/network-multitool:latest
        command:
        - /bin/sh
        - -c
        - |
          tail -f /data/shared.txt
        volumeMounts:
        - name: persistent-storage
          mountPath: /data
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: local-pvc
