sc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange-sc
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exchange-sc
  template:
    metadata:
      labels:
        app: data-exchange-sc
    spec:
      containers:
      - name: busybox
        image: busybox:latest
        command: ["/bin/sh", "-c"]
        args:
        - |
          while true; do
            echo "$(date) - Data from busybox SC" >> /data/shared.txt
            sleep 5
          done
        volumeMounts:
        - name: persistent-storage
          mountPath: /data
      - name: multitool
        image: wbitt/network-multitool:latest
        command: ["/bin/sh", "-c"]
        args:
        - |
          tail -f /data/shared.txt
        volumeMounts:
        - name: persistent-storage
          mountPath: /data
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: sc-pvc
